Work on file status and validation

--- a/Finn/Views/MainWindow.axaml
+++ b/Finn/Views/MainWindow.axaml
@@ -79,6 +79,11 @@
 		<Style Selector="DataGridRow.RedForeground">
 			<Setter Property="Foreground" Value="Red"/>
 		</Style>
+
+		<Style Selector="DataGridRow.Placeholder">
+			<Setter Property="Foreground" Value="Sienna"/>
+			<Setter Property="FontWeight" Value="Bold"/>
+		</Style>
 		
 	</Window.Styles>
 
