--- a/Finn/App.axaml
+++ b/Finn/App.axaml
@@ -2,6 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:system="clr-namespace:System;assembly=netstandard"
 			 xmlns:dialogHostAvalonia="clr-namespace:DialogHostAvalonia;assembly=DialogHost.Avalonia"
+			 x:CompileBindings="True"
 			 x:Class="Finn.App">
 
 	<Application.Styles>
