--- a/Finn/Views/PreWindow.axaml
+++ b/Finn/Views/PreWindow.axaml
@@ -7,11 +7,16 @@
         xmlns:views="clr-namespace:Finn.Views"
         x:Class="Finn.Views.PreWindow"
         ExtendClientAreaToDecorationsHint="True"
-        Title="PreWindow">
+        Title="Preview">
 
-        <Grid Margin="0 40 0 5">
-            <views:PreView/>
-        </Grid>
+	<Window.Styles>
+		<Style Selector="Window[WindowState=Maximized]">
+			<Setter Property="Padding" Value="5 5 0 5"/>
+		</Style>
+	</Window.Styles>
 
+	<Grid Margin="0,40,0,5">
+		<views:PreView/>
+	</Grid>
 
 </Window>
