--- a/Finn/Views/PreView.axaml
+++ b/Finn/Views/PreView.axaml
@@ -19,6 +19,12 @@
 		<converter:GridDefConverter x:Key="GridDefConverter"/>
 	</UserControl.Resources>
 
+	<UserControl.Styles>
+		<Style Selector="Border">
+			<Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+		</Style>
+	</UserControl.Styles>
+
 	<Grid Name="MainPreviewGrid" RowDefinitions="*,40" ColumnDefinitions="*,Auto" Margin="0">
 		<Grid Name="PreviewGrid" ClipToBounds="True" ColumnDefinitions="*" RowDefinitions="*" Grid.Row="0" Grid.Column="0">
 			<LayoutTransformControl Name="Tester">
@@ -108,9 +114,7 @@
 		<Grid ColumnDefinitions="*,Auto,*" Grid.Row="1" Grid.ColumnSpan="2">
 			<Border Grid.Column="1" BoxShadow="{Binding Storage.General.Shadow}"
 					Background="{DynamicResource TextControlBackground}" Margin="5"
-					Padding="4,0"
-					BorderBrush="{DynamicResource SystemControlForegroundBaseMediumLowBrush}"
-					BorderThickness="0,1,0,0">
+					Padding="4,0">
 				<StackPanel FlowDirection="LeftToRight" Orientation="Horizontal" Spacing="2" HorizontalAlignment="Center" Margin="10 0 10 0" DataContext="{Binding PreviewVM}" Width="">
 
 					<Slider Name="ScrollSlider" FlowDirection="LeftToRight" Width="200" Height="35" Margin="0 -10 0 0" Minimum="1" IsSnapToTickEnabled="True" VerticalAlignment="Top"
