--- a/Finn/Views/PreView.axaml
+++ b/Finn/Views/PreView.axaml
@@ -8,6 +8,7 @@
 			 xmlns:icxt="using:FluentIcons.Avalonia.MarkupExtensions" 
 			 xmlns:anim="clr-namespace:Avalonia.Animation;assembly=MuPDFCore.MuPDFRenderer"
 			 xmlns:converter="clr-namespace:Finn.Converters"
+			 xmlns:ctrl="clr-namespace:Finn.Controls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:MainViewModel"
              x:Class="Finn.Views.PreView">
@@ -26,7 +27,9 @@
 	</UserControl.Styles>
 
 	<Grid Name="MainPreviewGrid" RowDefinitions="*,40" ColumnDefinitions="*,Auto" Margin="0">
-		<Grid Name="PreviewGrid" ClipToBounds="True" ColumnDefinitions="*" RowDefinitions="*" Grid.Row="0" Grid.Column="0">
+		<Grid Name="PreviewGrid" ClipToBounds="True" ColumnDefinitions="*" RowDefinitions="*"
+      Grid.Row="0" Grid.Column="0"
+      Background="{Binding PreviewVM.PreviewBackground}">
 			<LayoutTransformControl Name="Tester">
 				<LayoutTransformControl.LayoutTransform>
 					<RotateTransform Angle="{Binding PreviewVM.Rotation}"/>
@@ -40,8 +43,8 @@
 					</Grid.ColumnDefinitions>
 
 					<mupdf:PDFRenderer Name="MuPDFRenderer" Grid.Column="0" Background="Transparent" PageBackground="White"
-				   ZoomEnabled="False" PointerWheelChanged="ModifiedControlPointerWheelChanged"
-				   ZoomIncrement="1.3" ClipToBounds="True" PointerEventHandlersType="PanHighlight">
+			   ZoomEnabled="False" PointerWheelChanged="ModifiedControlPointerWheelChanged"
+			   ZoomIncrement="1.3" ClipToBounds="True" PointerEventHandlersType="PanHighlight">
 						<mupdf:PDFRenderer.ContextMenu>
 							<ContextMenu>
 								<MenuItem Header="Copy" Icon="{icxt:SymbolIconExtension Symbol=Clipboard}" Command="{Binding PreviewVM.CopyToClipboard}" CommandParameter="{Binding $parent[Window]}"/>
@@ -50,8 +53,8 @@
 					</mupdf:PDFRenderer>
 
 					<mupdf:PDFRenderer Name="MuPDFRendererSecondary" Grid.Column="2" Background="Transparent" PageBackground="White"
-				   ZoomEnabled="False" PointerWheelChanged="ModifiedControlPointerWheelChanged"
-				   ZoomIncrement="1.3" ClipToBounds="True" PointerEventHandlersType="PanHighlight" IsVisible="{Binding PreviewVM.TwopageMode}">
+			   ZoomEnabled="False" PointerWheelChanged="ModifiedControlPointerWheelChanged"
+			   ZoomIncrement="1.3" ClipToBounds="True" PointerEventHandlersType="PanHighlight" IsVisible="{Binding PreviewVM.TwopageMode}">
 						<mupdf:PDFRenderer.ContextMenu>
 							<ContextMenu>
 								<MenuItem Header="Copy" Icon="{icxt:SymbolIconExtension Symbol=Clipboard}" Command="{Binding PreviewVM.CopyToClipboard}" CommandParameter="{Binding $parent[Window]}"/>
@@ -59,6 +62,10 @@
 						</mupdf:PDFRenderer.ContextMenu>
 					</mupdf:PDFRenderer>
 
+					<!-- Inversion overlay: renders LAST, spans all columns, passes input through -->
+					<ctrl:InvertColorControl Grid.ColumnSpan="3"
+						IsInverted="{Binding PreviewVM.DarkMode}"
+						IsHitTestVisible="False" />
 				</Grid>
 			</LayoutTransformControl>
 		</Grid>
@@ -144,10 +151,10 @@
 					</Button>
 
 
-					<Button ToolTip.Tip="Toggle Dimmed Background, Ctrl + G" HotKey="Ctrl+G" FontWeight="Normal" Name="DimmedMode" Command="{Binding ToggleDimmed}" ToolTip.Placement="Right">
+					<Button ToolTip.Tip="Toggle Dimmed Background, Ctrl + G" HotKey="Ctrl+G" FontWeight="Normal" Name="DimmedMode" Command="{Binding ToggleDarkMode}" ToolTip.Placement="Right">
 						<StackPanel>
-							<ic:SymbolIcon Symbol="WeatherMoonOff" IconVariant="Regular" FontSize="16" IsVisible="{Binding !DimmedBackground}"/>
-							<ic:SymbolIcon Symbol="WeatherMoon" IconVariant="Regular" FontSize="16" IsVisible="{Binding DimmedBackground}"/>
+							<ic:SymbolIcon Symbol="WeatherMoonOff" IconVariant="Regular" FontSize="16" IsVisible="{Binding !DarkMode}"/>
+							<ic:SymbolIcon Symbol="WeatherMoon" IconVariant="Regular" FontSize="16" IsVisible="{Binding DarkMode}"/>
 						</StackPanel>
 					</Button>
 
